--- a/pages/portfolio/introduction.mdx
+++ b/pages/portfolio/introduction.mdx
@@ -1,6 +1,19 @@
 # Introduction
 
 This is my portfolio for the Geovisualization course at the University of Trier. Here you can find all the projects I have worked on during the semester.
+The portfolio covers the following topics and aspects of Geovisualization:
+- The key **principles of geovisualization**.
+- **Methods and tools** used in geovisualization (especially geoinformation systems like QGIS and ArcGIS Pro).
+- **Examples** of geovisualization based on the course material and exercises during the semester.
+- The two main **projects** I worked on during the semester: 
+  - The **flood project**, which is a geovisualization of the Moselle River in Trier, Germany, and different flood levels.
+  - The **RUSLE project**, which is a geovisualization of soil erosion in western Kenia including als steps of the RUSLE model, analysing the soil loss in this region.
 
-- What improvements to interpretation does interactive content have?
-- Self reflection and critics on the projects
+#### Own Contribution:
+
+Instead of a further analysis in the RUSLE project I decided to take advantage of the opportunities and redo the analysis process in R.
+As I planned to get involved in geocomputation with R for a long time, this gave me a good opportunity to explore some of the most important packages for raster and vector data analysis. Most important packages used to performm the analysis and generate the maps/plots are:
+- `sf`: for vector data handling
+- `terra`: for raster data handling
+- `tmap`: for thematic mapping
+
