--- a/pages/portfolio/tools/examples.mdx
+++ b/pages/portfolio/tools/examples.mdx
@@ -191,12 +191,12 @@ This example focuses on creating a custom map using OpenStreetMap (OSM) data wit
    - Display the park area with a transparent color overlay on the basemap.
 </Steps>
 
-<span className="text-xl font-bold text-black">Learnings</span>
+<span className="text-xl font-bold ">Learnings</span>
 - Understand how to handle and visualize OSM data in QGIS.
 - Learn to use categorized and rule-based renderers for effective map visualization.
 - Gain experience in creating custom basemaps and adding thematic layers.
 <br/>
-<span className="text-xl font-bold text-black">Outcome</span>
+<span className="text-xl font-bold ">Outcome</span>
 - A custom overview map of the "National Park Hunsrück-Hochwald" region (Figure 4), showcasing various land uses, roads, and rivers, with the national park area highlighted.
 <br/>
 
@@ -238,14 +238,14 @@ In this example volcano data in the Pacific region was visualized as a qualitati
    - Create a heatmap to visualize the density of volcanoes, adjusting color ramps and point sizes for effective display.
 </Steps>
 
-<span className="text-xl font-bold text-black">Learnings</span>
+<span className="text-xl font-bold ">Learnings</span>
 - Understand how to connect to and use WFS services in QGIS.
 - Learn to process and join data from different sources (WFS and Excel).
 - Gain experience in selecting and applying appropriate map projections.
 - Explore advanced visualization techniques, including custom SVG markers, clustering, and heatmaps.
 - Develop skills in creating and customizing map layouts and legends in QGIS.
 <br/>
-<span className="text-xl font-bold text-black">Outcome</span>
+<span className="text-xl font-bold ">Outcome</span>
 - A customized map of the "Ring of Fire" region, highlighting the distribution of volcanoes and their type.
 - A customized map of the "Ring of Fire" region showing the density of volcanoes.
 <br/>
@@ -356,14 +356,14 @@ In this example road traffic and vehicle accident data in North Rhine-Westphalia
 ![Vehicle Accidents in NRW](/portfolio/tools/Examples/w6/vehicle_accidents_nrw.png)
 **Figure 7:** Static diagram map showing the number of accidents per municipality in NRW.
 <br/>
-<span className="text-xl font-bold text-black">Learnings</span>
+<span className="text-xl font-bold ">Learnings</span>
 - Understand how to process and visualize quantitative traffic data in QGIS
 - Learn to use graduated and data-defined override renderers for thematic mapping.
 - Learn to normalize data by area and other relevant attributes (e.g., number of vehicles) for better spatial analysis.
 - Gain experience in creating diagrams and choropleth maps for thematic mapping.
 - Develop skills in exporting QGIS maps to interactive web formats using the `qgis2web` plugin.
 <br/>
-<span className="text-xl font-bold text-black">Outcome</span>
+<span className="text-xl font-bold ">Outcome</span>
 - A interactive thematic web map of road traffic in NRW, visualizing mean daily traffic counts using graduated or proportional line widths.
 - A series of choropleth maps showing number of vehicle accidents in NRW, normalized by area and the number of registered vehicles.
 - A static diagram map showing the number of accidents per municipality in NRW.
@@ -411,13 +411,13 @@ In this example a Digital Elevation Model (DEM) of Trier and some derivatives we
    - Visualize slope and aspect maps with appropriate color ramps from the Style Manager.
 </Steps>
 
-<span className="text-xl font-bold text-black">Learnings</span>
+<span className="text-xl font-bold ">Learnings</span>
 - Understand how to import and process DEM data in QGIS.
 - Learn to interpolate point data into a raster DEM using TIN interpolation.
 - Gain experience in customizing color ramps and applying hillshading for enhanced DEM visualization.
 - Develop skills in generating and visualizing DEM derivatives such as contour lines, slope, and aspect maps.
 <br/>
-<span className="text-xl font-bold text-black">Outcome</span>
+<span className="text-xl font-bold ">Outcome</span>
 - A detailed DEM of the Trier region, visualized with custom color ramps and hillshading.
 - Contour lines, slope, and aspect maps derived from the DEM, visualized with custom color ramps and hillshading.
 
@@ -463,13 +463,13 @@ In this example 3D buildings in Trier, Germany were created and visualized, usin
 
 </Steps>
 
-<span className="text-xl font-bold text-black">Learnings</span>
+<span className="text-xl font-bold ">Learnings</span>
 - Understand how to fix geometries and process building footprint data from OpenStreetMap.
 - Learn to calculate building heights using zonal statistics and raster data (DSM).
 - Gain experience in visualizing building heights in both 2D and 3D using QGIS.
 - Develop skills in creating map layouts and 3D visualizations for spatial data.
 <br/>
-<span className="text-xl font-bold text-black">Outcome</span>
+<span className="text-xl font-bold ">Outcome</span>
 - A 2D map of Trier's buildings, color-coded by height. (not shown in the portfolio)
 - A 3D web map of Trier's buildings, extruded based on calculated heights.
 <br/>
