--- a/pages/portfolio/projects/rusle.mdx
+++ b/pages/portfolio/projects/rusle.mdx
@@ -32,7 +32,8 @@ Understanding its spatial patterns and drivers is essential for sustainable land
 This project presents a comprehensive geospatial assessment of soil erosion risk in western Kenya using the **Revised Universal Soil Loss Equation (RUSLE)**, 
 integrating remote sensing, GIS, and statistical modeling to quantify and visualize erosion factors at a landscape scale.  
 
-#### **Scope and Objectives**  
+**Scope and Objectives**
+
 This project has systematically addressed each component of RUSLE—**Rainfall Erosivity (R)**, **Soil Erodibility (K)**, **Slope Length and Steepness (LS)**, **Crop Management (C)**, except **Protection Practices (P)**—to map erosion hotspots and identify vulnerable areas. Key objectives included:  
 1. **Data Integration**: Leveraging global datasets (MODIS NDVI, SoilGrids, ESDAC rainfall) with localized adjustments.  
 2. **Methodological Rigor**: Adapting formulas (e.g., USPED for LS, empirical regressions for C) to raster-based GIS workflows.  
@@ -89,7 +90,7 @@ The analysisi was initially done in ArcGIS Pro and then redone with R using seve
 **Figure 3:** Static 3D view of the study area in western Kenya, showing the DEM and other geographic information layers.
 
 #### Interactive 3D View of the Study Area
-
+<br/>
 <iframe
   width="100%"
   height="600"
