--- a/pages/portfolio/tools/arcgis.mdx
+++ b/pages/portfolio/tools/arcgis.mdx
@@ -30,6 +30,6 @@ ArcGIS Pro is excellent for geovisualization due to its powerful rendering engin
 9. **Professional-Quality Map Layouts** – The **Layout View** provides tools for creating high-quality **print and digital maps**, complete with legends, scale bars, and annotations.  
 
 
-### Graphical User Interface (GUI)
+**Graphical User Interface (GUI)**
 
 ![ArcGIS Pro GUI](/portfolio/tools/ArcGIS/ArcGIS-Pro-GUI.jpg)
