--- a/pages/portfolio/tools/qgis.mdx
+++ b/pages/portfolio/tools/qgis.mdx
@@ -27,6 +27,6 @@ QGIS is great for geovisualization because of its flexibility, extensive toolset
 8. **Print Composer & Layouts** – High-quality map layouts can be created for reports, including legends, scale bars, and annotations.  
 
 
-### Graphical User Interface (GUI)
+**Graphical User Interface (GUI)**
 
 ![QGIS logo](/portfolio/tools/QGIS/QGIS-GUI.png)
