add GitHub links

--- a/pages/portfolio/introduction.mdx
+++ b/pages/portfolio/introduction.mdx
@@ -18,4 +18,5 @@ for generating maps and plots were:
 - `sf`: for vector data handling
 - `terra`: for raster data handling
 - `tmap`: for thematic mapping
-The R script with the associated code for the analysis and the maps is available on [GitHub](/about).
+
+The R script with the associated code for the analysis and the maps is available on [GitHub](https://github.com/fab-scm/geovis-portfolio/blob/master/R/RUSLE.R).
