--- a/pages/portfolio/projects/rusle.mdx
+++ b/pages/portfolio/projects/rusle.mdx
@@ -43,6 +43,7 @@ This project has systematically addressed each component of RUSLE—**Rainfall E
 
 In this first part of the project we focus on creating and analyzing an overview and a land-use map of the study area.
 The analysis was initially done in ArcGIS Pro and then redone with R using several packages, mainly `sf`, `terra`, and `tmap` for spatial data analysis and visualization.
+The R script with the associated code for the analysis and the maps is available on [GitHub](https://github.com/fab-scm/geovis-portfolio/blob/master/R/RUSLE.R).
 
 ### Map of the Study Area
 
