--- a/pages/portfolio/projects/flood.mdx
+++ b/pages/portfolio/projects/flood.mdx
@@ -16,9 +16,8 @@ Uses Python geoprocessing tools to simulate water levels (3m–12m) and identify
 {<h3>Visualize Risk</h3>}
 Create static maps and web-ready animations to communicate flood exposure, categorized by severity (high/medium/low risk).
 </Steps>
-The complete workflow represents an end-to-end geovisualization pipeline, progressing from 2D analysis to 3D presentation:
-<br/>
-<span className="text-xl font-bold ">Outcome:</span>
+
+<span className="text-xl font-bold ">Outcome:</span> <br/>
 Static maps, interactive web maps, time-enabled flood animations, and risk classification for emergency preparedness.
 
 
